@@ -59,9 +59,11 @@ export(
        matlab2POSIXt,
        match.bytes,
        matrix.smooth,
+       number.as.POSIXct,
        oce.approx,
        oce.as.POSIXlt,
        oce.axis.POSIXct,
+       oce.bisect,
        oce.colors.gebco,
        oce.colors.palette,
        oce.colors.jet,
