@@ -1,4 +1,6 @@
 0.1-82
+- number.as.POSIXct(): added
+- oce.biset(): added
 - despike(): add argument 'action'
 - detrend(): added
 - read.adp.sontek(): handle PCADP type
